--- a/templates/lista.html
+++ b/templates/lista.html
@@ -1,28 +1,89 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Jogoteca</title>
+<html lang="en">
+<head>
+<meta charset="UTF-8">
+<meta http-equiv="X-UA-Compatible" content="IE=edge">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Jogoteca</title>
+<style>
+  body {
+    font-family: Arial, sans-serif;
+    margin: 0;
+    padding: 0;
+    background-color: #0e0e0e;
+    color: #fff;
+  }
+
+  .container {
+    max-width: 800px;
+    margin: 0 auto;
+    padding: 20px;
+  }
+
+  .page-header {
+    text-align: center;
+    margin-bottom: 20px;
+  }
+
+  table {
+    width: 100%;
+    border-collapse: collapse;
+    border-spacing: 0;
+    background-color: #1a1a1a;
+    border-radius: 10px;
+    overflow: hidden;
+    box-shadow: 0 0 20px rgba(0, 0, 0, 0.2);
+  }
+
+  th, td {
+    padding: 10px;
+    text-align: left;
+    border-bottom: 1px solid #333;
+  }
+
+  th {
+    background-color: #333;
+    color: #fff;
+    text-transform: uppercase;
+  }
+
+  tr:nth-child(even) {
+    background-color: #333;
+  }
+
+  tr:hover {
+    background-color: #555;
+  }
+</style>
 </head>
 <body>
   <div class="container">
-      <div class="page-header">
-         <h1>Jogoteca</h1>
-      </div>
-      <table class="table table-striped table-responsive table-bordered">
-         <thead class="thead-default">
-            <tr>
-               <th>None</th>
-            </tr>
-        </thead>
-        <tbody>
-           <tr>
-              <td>God of War</td>
-           </tr>
-           <tr>
-            <td>Gran turismo</td>
-         </tr>
-         <tr>
-            <td>GTA</td>
-         </tr>
+   {% with messages = get_flashed_messages() %}
+   {% if messages %} 
+       <ul id="messages" class="list-unstyled">
+       {% for message in messages %}
+           <li class="alert alert-success">{{ message }}</li>
+       {% endfor %}
+       </ul>
+   {% endif %}
+{% endwith %}
+    <div class="page-header">
+      <h1>Jogoteca</h1>
+    </div>
+    <table>
+      <thead>
+        <tr>
+          <th>Name</th>
+        </tr>
+      </thead>
+      <tbody>
+        {% for game in game_list %}
+        <tr>
+          <td>{{ game.name }}</td>
+        </tr>
+        {% endfor %}
+      </tbody>
+    </table>
+  </div>
+</body>
+</html>
